Fiz algumas alterações no site

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a href="#popular" class="nav__link">Modelos</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#featured" class="nav__link">Marcas</a>
+                        <a href="./Marcas.html" class="nav__link">Marcas</a>
                     </li>
                 </ul>
 
@@ -269,7 +269,7 @@
         <!--==================== FEATURES ====================-->
         <section class="features section">
             <h2 class="section__title">
-                Ficha Tecnica
+                <!-- Ficha Tecnica -->
             </h2>
 
             <div class="features__container container grid">
@@ -323,6 +323,27 @@
                             <img src="assets/img/logo1.png" alt="">
                         </button>
                     </li>
+                    <li>
+                        <button class="featured__item" data-filter=".Mclaren">
+                            <img src="assets/img/icons8-mclaren-48.png" alt="">
+                        </button>
+                    </li>
+                    <li>
+                        <button class="featured__item" data-filter=".Masserati">
+                            <img src="assets/img/icons8-maserati-48.png" alt="">
+                        </button>
+                    </li>
+                    <li>
+                        <button class="featured__item" data-filter=".Chevrolet">
+                            <img src="assets/img/icons8-chevrolet-48.png" alt="">
+                        </button>
+                    </li>
+                    <li>
+                        <button class="featured__item" data-filter=".BMW">
+                            <img src="assets/img/icons8-bmw-48.png" alt="">
+                        </button>
+                    </li>
+
                 </ul>
 
                 <div class="featured__content grid">
@@ -330,7 +351,7 @@
                     <article class="featured__card mix tesla">
                         <div class="shape shape__smaller"></div>
 
-                        <h1 class="featured__title">chevrlolet</h1>
+                        <h1 class="featured__title">Chevrolet</h1>
                         <h3 class="featured__subtitle">???</h3>
                         <img src="assets/img/featured1.png" alt="" class="featured__img">
                         <h3 class="featured__price">$98,900</h3>
@@ -378,8 +399,20 @@
                     <article class="featured__card mix porsche">
                         <div class="shape shape__smaller"></div>
 
-                        <h1 class="featured__title">Porsche</h1>
+                        <h1 class="featured__title">BMW</h1>
                         <h3 class="featured__subtitle">carrera 911</h3>
+                        <img src="assets/img/porche-911.webp" alt="" class="featured__img">
+                        <h3 class="featured__price">$175,900</h3>
+                        <button class="button featured__button">
+                            <i class="ri-shopping-bag-2-line"></i>
+                        </button>
+
+                    </article>
+                    <article class="featured__card mix porsche">
+                        <div class="shape shape__smaller"></div>
+
+                        <h1 class="featured__title">Mclaren</h1>
+                        <h3 class="featured__subtitle"></h3>
                         <img src="assets/img/porche-911.webp" alt="" class="featured__img">
                         <h3 class="featured__price">$175,900</h3>
                         <button class="button featured__button">
@@ -456,7 +489,7 @@
             <div class="footer__content">
                 <a href="#" class="footer__logo">
                     <i class="ri-steering-line"></i>
-                    NextCar
+                    EACars
                 </a>
                 <p class="footer__description">
                     Procuramos sanar suas vontades <br> e tornar seu sonho real.
@@ -466,7 +499,7 @@
 
             <div class="footer__content">
 
-                <h3 class="footer__title">Comphania </h3>
+                <h3 class="footer__title">Companhia </h3>
 
                 <ul class="footer__links">
                     <li>
@@ -476,26 +509,25 @@
                         <a href="#" class="footer__links">Carros</a>
                     </li>
                     <li>
-                        <a href="#" class="footer__links">Historia</a>
+                        <a href="#" class="footer__links">História</a>
                     </li>
                     <li>
-                        <a href="#" class="footer__links">Shoping</a>
+                        <a href="#" class="footer__links">Shopping</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="#" class="footer__links"></a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
 
             <div class="footer__content">
-                <h3 class="footer__title">informações </h3>
+                <h3 class="footer__title">Informações </h3>
                 <ul class="footer__links">
-                    
                     <li>
-                        <a href="#" class="footer__links">Procure o Lider</a>
+                        <a href="mailto:hector.guedesmonteiro@gmail.com" class="footer__links">Procure o Lider</a>
                     </li>
                     <li>
-                        <a href="#" class="footer__links">Nos Contate</a>
+                        <a href="" class="footer__links">Nos Contate</a>
                     </li>
                     <li>
                         <a href="#" class="footer__links">Serviços</a>
@@ -505,7 +537,7 @@
             </div>
 
             <div class="footer__content">
-                <h3 class="footer__title"> Nos Siga </h3>
+                <h3 class="footer__title">Nos Siga </h3>
 
                 <ul class="footer__social">
                     <a href="" target="_blank" class="footer__social-link">
@@ -521,10 +553,10 @@
             </div>
         </div>
         <span class="footer__copy">
-            &#169; <a target="_blank" href="abdullahmoin.web.app" class="footer__dev-link">instituição Senai</a> <h4>Desenvoldores</h4>
-            <a href="https://github.com/gustaS244">Gustavo</a> 
-            <a href="https://github.com/HectorG9">Hector</a> 
-            <a href="https://github.com/LHPS31">Luiz .H</a>
+            &#169; <a target="_blank" href="https://www.fiemg.com.br/senai/" class="footer__dev-link">Instituição Senai</a> <h4>Desenvoldores</h4>
+            <a href="https://github.com/gustaS244" class="footer-link">Gustavo</a> 
+            <a href="https://github.com/HectorG9" class="footer-link">Hector</a> 
+            <a href="https://github.com/LHPS31" class="footer-link">Luiz .H</a>
             <p id="date"></p>
         </span>
     </footer>
