adicionando audio no fundo do site Alterações feitas na página das marcas

--- a/Marcas.html
+++ b/Marcas.html
@@ -52,30 +52,15 @@
             <article class="popular__card swiper-slide">
                 <div class="shapeX shape__smaller"></div>
 
-                <h1 class="popular__title">Ferrari</h1>
+                <h1 class="popular__title"></h1>
                 <h3 class="popular__subtitle">F40</h3>
 
                 <img src="assets/img/ferrari-f40.jpg" alt="" class="popular__img">
-
-                <!-- <div class="popular__data">
-                    <div class="popular__data-group">
-                        <i class="ri-dashboard-2-line"></i> 4,3 sec
-                    </div>
-                    <div class="popular__data-group">
-                        <i class="ri-exchange-funds-line"></i> 324 Km/h
-                    </div>
-                    <div class="popular__data-group">
-                        <i class="ri-charging-pile-2-line"></i> V8 biturbo
-                    </div>
-                </div> -->
-
                 <h3 class="popular__price">$175,900</h3>
                 <button class="button popular__button">
                     <i class="ri-shopping-bag-2-line"></i>
                 </button>
-
             </article>
-
             <article class="popular__card swiper-slide">
                 <div class="shapeX shape__smaller"></div>
 
@@ -126,8 +111,7 @@
                 <h3 class="popular__price">$150,900</h3>
                 <button class="button popular__button">
                     <i class="ri-shopping-bag-2-line"></i>
-                </button>,
-                
+                </button> 
             </article>
 
         </div>
