adicionei algumas imagens

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         Pegue seu melhor carro
                     </h1>
                     <h2 class="home__subtitle">
-                        Ferrari 458
+                        Nissan 350z
                     </h2>
                     <h3 class="home__elec">
                         <i class="ri-flashlight-fill"></i>
@@ -81,13 +81,13 @@
                     </h3>
                 </div>
 
-                <img src="assets/img/home5.png" alt="" class="home__img">
+                <img src="assets/img/350z.png" alt="" class="home__img">
                 <div class="home__car">
                     <div class="home__car-data">
                         <div class="home__car-icon">
                             <i class="ri-temp-cold-line"></i>
                         </div>
-                        <h2 class="home__car-number">3.0s</h2>
+                        <h2 class="home__car-number">5,7 s</h2>
                         <h3 class="home__car-name">0-100 km/h</h3>
 
                     </div>
@@ -96,7 +96,7 @@
                         <div class="home__car-icon">
                             <i class="ri-dashboard-2-line"></i>
                         </div>
-                        <h2 class="home__car-number">419</h2>
+                        <h2 class="home__car-number">280</h2>
                         <h3 class="home__car-name">Cavalos</h3>
 
                     </div>
@@ -104,12 +104,16 @@
                         <div class="home__car-icon">
                             <i class="ri-flashlight-fill"></i>
                         </div>
-                        <h2 class="home__car-number">325 km/h</h2>
+                        <h2 class="home__car-number">250 km/h</h2>
                         <h3 class="home__car-name">Velocidade maxima</h3>
+
+                        
 
                     </div>
 
                 </div>
+
+                
 
                 <a href="#" class="home__button">START</a>
 
@@ -200,6 +204,7 @@
 
                         <h3 class="popular__price">$175,900</h3>
                         <button class="button popular__button">
+                            <a href="./indexcompra.html"></a>
                             <i class="ri-shopping-bag-2-line"></i>
                         </button>
 
