mechi nas marcas

--- a/Marcas.html
+++ b/Marcas.html
@@ -52,8 +52,8 @@
             <article class="popular__card swiper-slide">
                 <div class="shapeX shape__smaller"></div>
 
-                <h1 class="popular__title"></h1>
-                <h3 class="popular__subtitle">F40</h3>
+                <h1 class="popular__title">Chevrolet Corvette</h1>
+                <h3 class="popular__subtitle">Corvette C6</h3>
 
                 <img src="assets/img/ferrari-f40.jpg" alt="" class="popular__img">
                 <h3 class="popular__price">$175,900</h3>
