--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             
         </nav>
-        <audio autoplay muted id="musica"> <!-- agora com autoplay e sem controls-->
+        <audio autoplay controls id="musica"> <!-- agora com autoplay e sem controls-->
             <source src="./assets/video/Snoop Dogg feat. The Doors - Riders on the Storm.mp3" type="audio/mpeg">
                 <!-- <source src="" type=""> -->
             <!-- Autoplay is allowed. -->
@@ -361,7 +361,7 @@
 
                 <div class="featured__content grid">
 
-                    <article class="featured__card mix tesla">
+                    <article class="featured__card mix chevrolet">
                         <div class="shape shape__smaller"></div>
 
                         <h1 class="featured__title">Chevrolet</h1>
@@ -373,7 +373,7 @@
                         </button>
 
                     </article>
-                    <article class="featured__card mix tesla">
+                    <article class="featured__card mix ferrari">
                         <div class="shape shape__smaller"></div>
 
                         <h1 class="featured__title">Mitsubishi</h1>
@@ -409,7 +409,7 @@
                         </button>
 
                     </article>
-                    <article class="featured__card mix porsche">
+                    <article class="featured__card mix BMW">
                         <div class="shape shape__smaller"></div>
 
                         <h1 class="featured__title">BMW</h1>
@@ -421,7 +421,7 @@
                         </button>
 
                     </article>
-                    <article class="featured__card mix porsche">
+                    <article class="featured__card mix Maclaren">
                         <div class="shape shape__smaller"></div>
 
                         <h1 class="featured__title">Mclaren</h1>
@@ -550,8 +550,7 @@
             </div>
 
             <div class="footer__content">
-                <h3 class="footer__title">Nos Siga </h3>
-
+                <h3 class="footer__title">Nos Siga</h3>
                 <ul class="footer__social">
                     <a href="" target="_blank" class="footer__social-link">
                         <i class="ri-facebook-fill"></i>
@@ -580,7 +579,6 @@
     <a href="" class="scrollup" id="scroll-up">
         <i class="ri-arrow-up-s-line"></i>
     </a>
-
 
     <!--=============== SCROLL REVEAL - PAGE ANNIMATION ===============-->
     <script src="assets/js/scrollrevealAnimation.min.js"></script>
