--- a/Marcas.html
+++ b/Marcas.html
@@ -55,7 +55,18 @@
                 <h1 class="popular__title">Chevrolet Corvette</h1>
                 <h3 class="popular__subtitle">Corvette C6</h3>
 
-                <img src="assets/img/ferrari-f40.jpg" alt="" class="popular__img">
+                <img src="assets/img/" alt="" class="popular__img">
+                <div class="popular__data">
+                    <div class="popular__data-group">
+                        <i class="ri-dashboard-2-line"></i> 3,9
+                    </div>
+                    <div class="popular__data-group">
+                        <i class="ri-exchange-funds-line"></i> 343 Km/h
+                    </div>
+                    <div class="popular__data-group">
+                        <i class="ri-charging-pile-2-line"></i> V6
+                    </div>
+                </div>
                 <h3 class="popular__price">$175,900</h3>
                 <button class="button popular__button">
                     <i class="ri-shopping-bag-2-line"></i>
