estou alterando a página das marcas

--- a/Marcas.html
+++ b/Marcas.html
@@ -42,95 +42,18 @@
         </nav>
     </header>
 
-<!--==================== POPULAR ====================-->
-<section class="popular section" id="popular">
-    <h2 class="section__title">
-        Chevrolet <br>
-    </h2>
-    <div class="popular__container container swiper">
-        <div class="swiper-wrapper">
-            <article class="popular__card swiper-slide">
-                <div class="shapeX shape__smaller"></div>
-
-                <h1 class="popular__title">Chevrolet Corvette</h1>
-                <h3 class="popular__subtitle">Corvette C6</h3>
-
-                <img src="assets/img/" alt="" class="popular__img">
-                <div class="popular__data">
-                    <div class="popular__data-group">
-                        <i class="ri-dashboard-2-line"></i> 3,9
-                    </div>
-                    <div class="popular__data-group">
-                        <i class="ri-exchange-funds-line"></i> 343 Km/h
-                    </div>
-                    <div class="popular__data-group">
-                        <i class="ri-charging-pile-2-line"></i> V6
-                    </div>
+    <!--==================== CARDS ====================-->
+    <main>
+        <section>
+            <div class="card" style="width: 18rem;">
+                <img src="./assets/img/c" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
-                <h3 class="popular__price">$175,900</h3>
-                <button class="button popular__button">
-                    <i class="ri-shopping-bag-2-line"></i>
-                </button>
-            </article>
-            <article class="popular__card swiper-slide">
-                <div class="shapeX shape__smaller"></div>
-
-                <h1 class="popular__title">BMW</h1>
-                <h3 class="popular__subtitle">BMW M3</h3>
-
-                <img src="assets/img/popular2.png" alt="" class="popular__img">
-
-                <div class="popular__data">
-                    <div class="popular__data-group">
-                        <i class="ri-dashboard-2-line"></i> 3,9
-                    </div>
-                    <div class="popular__data-group">
-                        <i class="ri-exchange-funds-line"></i> 343 Km/h
-                    </div>
-                    <div class="popular__data-group">
-                        <i class="ri-charging-pile-2-line"></i> V6
-                    </div>
-                </div>
-
-                <h3 class="popular__price">$114,900</h3>
-                <button class="button popular__button">
-                    <i class="ri-shopping-bag-2-line"></i> 
-                </button>
-
-            </article>
-
-            <article class="popular__card swiper-slide">
-                <div class="shapeX shape__smaller"></div>
-
-                <h1 class="popular__title">Chevrolet</h1>
-                <h3 class="popular__subtitle">Corvette</h3>
-
-                <img src="assets/img/popular3.png" alt="" class="popular__img">
-
-                <div class="popular__data">
-                    <div class="popular__data-group">
-                        <i class="ri-dashboard-2-line"></i> 3.7 sec
-                    </div>
-                    <div class="popular__data-group">
-                        <i class="ri-exchange-funds-line"></i> 356 Km/h
-                    </div>
-                    <div class="popular__data-group">
-                        <i class="ri-charging-pile-2-line"></i> V8
-                    </div>
-                </div>
-
-                <h3 class="popular__price">$150,900</h3>
-                <button class="button popular__button">
-                    <i class="ri-shopping-bag-2-line"></i>
-                </button> 
-            </article>
-
-        </div>
-        <div class="swiper-pagination"></div>
-    </div>
-
-    </section>
-
+            </div>
+        </section>
+    </main>
     <!--==================== FOOTER ====================-->
     <footer class="footer section">
         <div class="shapeX shape__big"></div>
