Adicionei mais Marcas

--- a/index.html
+++ b/index.html
@@ -399,22 +399,22 @@
               </button>
             </li>
             <li>
-              <button class="featured__item" data-filter=".Mclaren">
+              <button class="featured__item" data-filter=".mclaren">
                 <img src="assets/img/icons8-mclaren-48.png" alt="" />
               </button>
             </li>
             <li>
-              <button class="featured__item" data-filter=".Masserati">
+              <button class="featured__item" data-filter=".masserati">
                 <img src="assets/img/icons8-maserati-48.png" alt="" />
               </button>
             </li>
             <li>
-              <button class="featured__item" data-filter=".Chevrolet">
+              <button class="featured__item" data-filter=".chevrolet">
                 <img src="assets/img/icons8-chevrolet-48.png" alt="" />
               </button>
             </li>
             <li>
-              <button class="featured__item" data-filter=".BMW">
+              <button class="featured__item" data-filter=".bmw">
                 <img src="assets/img/icons8-bmw-48.png" alt="" />
               </button>
             </li>
@@ -558,7 +558,7 @@
               </button>
             </article>
 
-            <article class="featured__card mix BMW">
+            <article class="featured__card mix bmw">
               <div class="shape shape__smaller"></div>
 
               <h1 class="featured__title">BMW</h1>
@@ -570,7 +570,7 @@
               </button>
             </article>
 
-            <article class="featured__card mix Maclaren">
+            <article class="featured__card mix mclaren">
               <div class="shape shape__smaller"></div>
 
               <h1 class="featured__title">Mclaren</h1>
@@ -641,7 +641,7 @@
                 </button>
             </article>
 
-            <article class="featured__card mix Kawasaki">
+            <article class="featured__card mix kawasaki">
                 <div class="shape shape__smaller"></div>
   
                 <h1 class="featured__title">Kawasaki</h1>
