--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <i class="ri-menu-line"></i>
         </div>
       </nav>
-      <audio autoplay controls id="musica">
+      <audio controls>
         <!-- agora com autoplay e sem controls-->
         <source
           src="./assets/video/Snoop Dogg feat. The Doors - Riders on the Storm.mp3"
